loopwhile.BaggleSeeker.scala.error
Erreur de compilation :
BaggleSeeker:1: error: type mismatch;
 found   : Unit
 required: Boolean
while(prendBiscuit()) {
                  ^